# renderer_surface_splatting

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build-extern.sh
src/: CMakeLists.txt  egl.hpp  main.cpp  ply_loader.hpp  serializer.cu  splat_renderer.cpp  splat_renderer.hpp  utils.cpp  utils.hpp
src/shader/: attribute_vs.glsl  finalization_fs.glsl
